--- a/templates/Login/login.html
+++ b/templates/Login/login.html
@@ -29,7 +29,7 @@
 
         <div class="layadmin-user-login-box layadmin-user-login-header">
             <div>
-                <img src="{% static 'image/logo.png' %}">
+{#                <img src="{% static 'image/logo.png' %}">#}
             </div>
             <h2>钻孔工程智能管理系统</h2>
         </div>
