--- a/templates/Operator/file_check_list_page.html
+++ b/templates/Operator/file_check_list_page.html
@@ -17,17 +17,69 @@
     <div class="layui-card">
         <div class="layui-card-body">
             <fieldset class="layui-elem-field">
-                <legend>钻孔施工资料验收</legend>
+                <blockquote class="layui-elem-quote">钻孔施工资料验收</blockquote>
+                <form class="layui-form" action="">
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>工作面选择</label>
+                            <div class="layui-input-block">
+                                <select name="work_face" lay-verify="required" id="work_face"
+                                        lay-filter="work_face">
+                                    <option value=""></option>
+                                    {% for item in work_face %}
+                                        <option value="{{ item.0 }}">{{ item.1 }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>巷道选择</label>
+                            <div class="layui-input-block">
+                                <select name="tunnel" id="tunnel" lay-verify="required" lay-filter="tunnel">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>排号选择</label>
+                            <div class="layui-input-block">
+                                <select name="row" lay-verify="required" id="row" lay-filter="row">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">孔号</label>
+                            <div class="layui-input-block">
+                                <div class="layui-inline">
+                                    <input class="layui-input" name="kong_num" id="kong_num" autocomplete="off"
+                                           placeholder="请填写孔号">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <div class="layui-input-block">
+                                <button class="layui-btn" data-type="reload">搜索</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
                 <div class="layui-field-box">
-                    <table class="layui-table" id="project_list" lay-filter="test">
-
+                    <table class="layui-table" id="tableReload" lay-filter="test">
                     </table>
                 </div>
             </fieldset>
         </div>
     </div>
 </div>
-
 
 
 <script src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
@@ -38,34 +90,117 @@
 
 <script>
     layui.use(['table', 'upload', 'layer'], function () {
-       var table = layui.table;
-       var layer = layui.layer;
-       var $ = layui.$;
-
-       table.render({
-           elem: "#project_list",
-           url: '{% url 'Mining:check_material_record_rendering' %}',
-           method: 'post',
-           height: 'full-200',
-           defaultToolbar: ['filter', 'exports', 'print'],
-           cols: [[
-                      {field: 'kong_num', title: "孔号", align: 'center', width: '5%'},
-                      {field: 'open_kong_require', title: '钻孔施工原始表填写齐全', align: 'center', width: '15%'},
-                      {field: 'open_kong_hold', title: '是否按要求测斜', align: 'center', width: '15%'},
-                      {field: 'submit_times', title: '填写时间', align: 'center', width: '10%'},
-                      {field: 'submit_status', title: '填写状态', align: 'center', width: '10%'},
-                      {field: 'submit_person', title: '填报人员', align: 'center', width: '10%'},
-                      {fixed: 'right', title:'操作', toolbar: '#barDemo', width:100, align: 'center'},
+        var table = layui.table;
+        var layer = layui.layer;
+        var $ = layui.$;
+        var form = layui.form;
+        //工作面选择
+        form.on('select(work_face)', function (data) {
+            var work_face = $("#work_face").val();
+            console.log("选择工作面" + work_face);
+            $.post(
+                {% url 'getTunnelByWorkface' %},
+                {"work_face": work_face},
+                function (data) {
+                    //每次先清空下拉框
+                    $("#tunnel").empty();
+                    $("#row").empty();
+                    //先给一个空选项
+                    $("#tunnel").append($("<option />").text("").attr("value", ""));
+                    console.log("data is " + data.data, JSON.stringify(data.data));
+                    {#console.log(JSON.parse(data.data))#}
+                    tunnelObjs = JSON.stringify(data.data) !== '{}' ? JSON.parse(data.data) : [];
+                    console.log(tunnelObjs, 'tunnelObjs')
+                    tunnelObjs.map((item, index) => {
+                        id = item.pk;
+                        name = item.fields.tunnel_name;
+                        $("#tunnel").append($("<option />").text(name).attr("value", id)); //动态添加标签
+                        return item;
+                    });
+                    form.render();
+                })
+        });
+        //巷道选择
+        form.on('select(tunnel)', function (data) {
+            var tunnel = $("#tunnel").val();
+            console.log("选择巷道" + tunnel);
+            $.post(
+                {% url 'getRowByTunnel' %},
+                {"tunnel": tunnel},
+                function (data) {
+                    //每次先清空下拉框
+                    $("#row").empty();
+                    $("#row").append($("<option />").text("").attr("value", ""));
+                    console.log("data is " + data.data, JSON.stringify(data.data));
+                    {#console.log(JSON.parse(data.data))#}
+                    rowObjs = JSON.stringify(data.data) !== '{}' ? JSON.parse(data.data) : [];
+                    console.log(rowObjs, 'rowObjs')
+                    rowObjs.map((item, index) => {
+                        id = item.pk;
+                        name = item.fields.row_id;
+                        $("#row").append($("<option />").text(name).attr("value", id)); //动态添加标签
+                        return item;
+                    });
+                    form.render();
+                })
+            $
+        });
+        tb = table.render({
+            elem: "#tableReload",
+            url: '{% url 'Mining:check_material_record_rendering' %}',
+            method: 'post',
+            height: 'full-200',
+            defaultToolbar: ['filter', 'exports', 'print'],
+            cols: [[
+                {field: 'h_c_number', title: "孔号", align: 'center', width: '10%'},
+                {field: 'isQiQuanStr', title: '钻孔施工原始表填写齐全', align: 'center', width: '20%'},
+                {field: 'isCeXieStr', title: '是否按要求测斜', align: 'center', width: '20%'},
+                {field: 'dateTimestr', title: '填写时间', align: 'center', width: '20%'},
+                {field: 'desc', title: '反馈信息', align: 'center', width: '20%'},
+                {field: 'person', title: '填报人员', align: 'center', width: '10%'},
             ]]
-       });
+        });
 
-       table.on('tool(test)', function(obj){
-            var layEvent = obj.event; //获得 lay-event 对应的值
-            if(layEvent == 'fill_data'){
-                //layer.alert('Hi，头部工具栏扩展的右侧图标。');
-                window.location.href = "/Mining/operator/check_videos_record_fillin";
+        var $ = layui.$, active = {
+            reload: function () {
+                var kong_num = $('#kong_num').val();
+                var rowId = $("#row").val();
+                console.log("kong_num is", kong_num);
+                console.log("rowId is", rowId);
+                //执行重载
+                table.reload('tableReload', {
+                    method: 'get',
+                    url: "{% url 'Mining:check_material_record_rendering' %}",
+                    where: {
+                        kong_num: kong_num,
+                        rowId: rowId
+                    },
+                    page: {
+                        curr: 1
+                    },
+                    done: function (res, curr, count) {
+                        //res为接口返回的信息
+                        console.log(res);
+                    }
+                }, 8000);
             }
-       });
+        };
+        $('.layui-btn').on('click', function () {
+            var workface = $("#work_face").val();
+            var tunnel = $("#tunnel").val();
+            var row = $("#row").val();
+            if (workface === "") {
+                layer.msg('请进行工作面选择', {icon: 5});
+            } else if (tunnel === "") {
+                layer.msg('请进行巷道选择', {icon: 5});
+            } else if (row === "") {
+                layer.msg('请进行排号选择', {icon: 5});
+            } else {
+                var type = $(this).data('type');
+                active[type] ? active[type].call(this) : '';
+            }
+            return false;
+        });
     });
 </script>
 </body>
