--- a/templates/Operator/feng_drill_list_his.html
+++ b/templates/Operator/feng_drill_list_his.html
@@ -3,20 +3,30 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>钻孔设计参数</title>
+    <title>施工列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="{% static 'layuiadmin/layui/css/layui.css' %}">
     <link rel="stylesheet" href="{% static 'layuiadmin/style/admin.css' %}">
+
+    <style type="text/css">
+        .layui-form-label {
+            width: 100px;
+        }
+
+        .layui-input-block {
+            margin-left: 130px;
+        }
+    </style>
 </head>
 
 <body layadmin-themealias="default">
 <div class="layui-fluid">
     <div class="layui-card">
         <div class="layui-card-body">
-            <blockquote class="layui-elem-quote">钻孔设计参数查询</blockquote>
+            <blockquote class="layui-elem-quote">施工参数查询</blockquote>
             <form class="layui-form" action="">
                 <div class="layui-inline">
                     <div class="layui-form-item">
@@ -72,7 +82,7 @@
                 </div>
             </form>
             <div class="layui-field-box">
-                <table class="layui-hide" id="table" lay-filter="test"></table>
+                <table id="demo" lay-filter="test" class="layui-hide"></table>
             </div>
         </div>
     </div>
@@ -82,24 +92,13 @@
 
 <script src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
 <script src="{% static 'layuiadmin/layui/layui.js' %}"></script>
-<script type="text/html" id="barDemo">
-    {% verbatim %}
-    {{# if(d.status == 2){ }}
-    <div class="layui-btn layui-btn-danger layui-btn-xs" lay-event="reSubmit">重新申请</div>
-    <div class="layui-btn layui-btn-danger layui-btn-xs" lay-event="newHole">跳过</div>
-    {{# } else{ }}
-    <div class="layui-btn layui-btn-disabled layui-btn-xs">重新申请</div>
-    <div class="layui-btn layui-btn-disabled layui-btn-xs">跳过</div>
-    {{# } }}
-    {% endverbatim %}
-</script>
 <script>
-    layui.use(['table', 'upload', 'layer'], function () {
+    layui.use(['table', 'upload', 'layer', 'laydate', 'form'], function () {
         var table = layui.table;
         var layer = layui.layer;
         var $ = layui.$;
+        var laydate = layui.laydate;
         var form = layui.form;
-
         //工作面选择
         form.on('select(work_face)', function (data) {
             var work_face = $("#work_face").val();
@@ -114,6 +113,7 @@
                     //先给一个空选项
                     $("#tunnel").append($("<option />").text("").attr("value", ""));
                     console.log("data is " + data.data, JSON.stringify(data.data));
+                    {#console.log(JSON.parse(data.data))#}
                     tunnelObjs = JSON.stringify(data.data) !== '{}' ? JSON.parse(data.data) : [];
                     console.log(tunnelObjs, 'tunnelObjs')
                     tunnelObjs.map((item, index) => {
@@ -149,33 +149,33 @@
                     });
                     form.render();
                 })
+            $
         });
-        var tb = table.render({
-            elem: "#table",
+        table.render({
+            elem: '#demo',
+            toolbar: '#toolbarDemo',
             id: "tableReload",
-            url: '{% url 'reloadDrillingDesignParams' %}',
-            method: 'get',
-            height: 'full-30',
-            page: true,
             defaultToolbar: ['filter', 'exports', 'print'],
+            height: 'full-200',
+            url: "{% url 'feng_drill_list_his' %}",        //数据接口
             cols: [[
-                {field: 'id', width: '7%', title: 'ID', sort: true, align: 'center', hide: true,},
-                {field: 'pai_num', width: '7%', title: '排号', sort: true, align: 'center',},
-                {field: 'kong_num', width: '7%', title: '孔号', sort: true, align: 'center',},
-                {field: 'pian_angle', width: '7%', title: '偏角', sort: true, align: 'center',},
-                {field: 'yang_angle', width: '7%', title: '仰角', sort: true, align: 'center',},
-                {field: 'kong_length', width: '7%', title: '孔深', sort: true, align: 'center',},
-                {field: 'yan_kong_length', width: '9%', title: '岩孔长度', sort: true, align: 'center',},
-                {field: 'mei_duan_length', width: '9%', title: '煤段长度', sort: true, align: 'center',},
-                {field: 'wash_coal', width: '8%', title: '冲煤量', sort: true, align: 'center',},
-                {field: 'see_ding_tip', width: '10%', title: '见顶提醒', sort: true, align: 'center',},
-                {field: 'see_mei_tip', width: '10%', title: '见煤提醒', sort: true, align: 'center',},
-                {field: 'desc', width: '10%', title: '状态', sort: true, align: 'center',},
-                {field: 'status', width: '5%', title: '状态码', sort: true, align: 'center', hide: true},
-                {fixed: 'right', width: '10%', title: '操作', align: 'center', toolbar: '#barDemo'},
-            ]]
+                {type: 'checkbox', fixed: 'left', align: "center"},
+                {field: 'id', title: 'ID', width: 100, sort: true, fixed: 'left', align: "center"},
+                {field: 'row', title: '排号', width: 100, align: "center"},
+                {field: 'h_c_number', title: '孔号', width: 100, align: "center"},
+                {field: 'feng_time', title: '封孔日期', width: 120, align: "center"},
+                {field: 'feng_drill_length', title: '封孔深度', width: 120, align: "center"},
+                {field: 'screening_length', title: '筛管长度', width: 120, align: "center"},
+                {field: 'grouting_amount', title: '注浆量', width: 120, align: "center"},
+                {field: 'grouting_pressure', title: '注浆压力', width: 120, align: "center"},
+                {field: 'zhu_drill_eval', title: '封孔评价', width: 120, align: "center"},
+                {field: 'construction_person_name', title: '施工负责人', width: 120, align: "center"},
+                {field: 'text_person', title: '验收负责人', width: 120, align: "center"},
+            ]],
+            page: true,     //开启分页
         });
-        var $ = layui.$, active = {
+
+         var $ = layui.$, active = {
             reload: function () {
                 var kong_num = $('#kong_num').val();
                 var rowId = $("#row").val();
@@ -184,7 +184,7 @@
                 //执行重载
                 table.reload('tableReload', {
                     method: 'get',
-                    url: '{% url 'reloadDrillingDesignParams' %}',
+                    url: "{% url 'feng_drill_list_his' %}",
                     where: {
                         kong_num: kong_num,
                         rowId: rowId
@@ -215,30 +215,6 @@
                 active[type] ? active[type].call(this) : '';
             }
             return false;
-        });
-        //监听行工具事件 主要是监听驳回状态设计孔进行重新申请事件
-        table.on('tool(test)', function (obj) {
-            var data = obj.data;
-            id = data.id
-            if (obj.event === 'reSubmit') {
-                layer.confirm('确定重新提交吗？', function (index) {
-                    $.post(
-                        {% url 'resubmitHoleDesign' %},
-                        {"id": id},
-                        function (res) {
-                            if (res.code === "0") {
-                                tb.reload();
-                                layer.msg("重新提交成功", {icon: 1});
-                            } else {
-                                layer.msg("重新提交失败," + res.msg, {icon: 5});
-                            }
-                        })
-                    return false;
-                });
-            }
-            if(obj.event === 'newHole'){
-
-            }
         });
     });
 </script>
