--- a/templates/Operator/jupai_required.html
+++ b/templates/Operator/jupai_required.html
@@ -17,27 +17,139 @@
     <div class="layui-card">
         <div class="layui-card-body">
             <fieldset class="layui-elem-field">
-                <legend>钻孔视频举牌验收记录</legend>
+                <blockquote class="layui-elem-quote">钻孔视频举牌验收记录</blockquote>
                 <form class="layui-form" action="">
-                    <br><br>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>工作面选择</label>
+                            <div class="layui-input-block">
+                                <select name="work_face" lay-verify="required" id="work_face"
+                                        lay-filter="work_face">
+                                    <option value=""></option>
+                                    {% for item in work_face %}
+                                        <option value="{{ item.0 }}">{{ item.1 }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>巷道选择</label>
+                            <div class="layui-input-block">
+                                <select name="tunnel" id="tunnel" lay-verify="required" lay-filter="tunnel">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>排号选择</label>
+                            <div class="layui-input-block">
+                                <select name="row" lay-verify="required" id="row" lay-filter="row">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>孔号</label>
+                            <div class="layui-input-block">
+                                <div class="layui-inline">
+                                    <input class="layui-input" lay-verify="required" name="kong_num" id="kong_num"
+                                           autocomplete="off"
+                                           placeholder="请填写孔号">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">施工确认</label>
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>开孔申请</label>
                         <div class="layui-input-block">
-                            <input type="checkbox" name="drill_apply" title="开孔申请">
-                            <input type="checkbox" name="drill_hold_pai" title="开孔举牌">
-                            <input type="checkbox" name="see_mei" title="见煤举牌">
-                            <input type="checkbox" name="see_ding" title="见顶举牌">
-                            <input type="checkbox" name="end_drill_pai" title="终孔举牌">
-                            <input type="checkbox" name="reback_drill_pai" title="退钻验收举牌">
-                            <input type="checkbox" name="flush_mei_pai" title="冲煤验收举牌">
-                            <input type="checkbox" name="feng_kong_pai" title="封孔开始举牌">
-                            <input type="checkbox" name="feng_kong_check" title="封孔验收举牌">
+                            <input type="radio" name="isKaiKongShenQing" value="1" title="是" checked="">
+                            <input type="radio" name="isKaiKongShenQing" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>开孔举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isKaiKongJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isKaiKongJuPai" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>见煤举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isJianMeiJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isJianMeiJuPai" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>见顶举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isJianDingJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isJianDingJuPai" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>终孔举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isZhongKongJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isZhongKongJuPai" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>退钻举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isTuiZuanYanShouJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isTuiZuanYanShouJuPai" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>冲煤验收举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isChongMeiYanShouJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isChongMeiYanShouJuPai" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>封孔开始举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isFengKongKaiShiJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isFengKongKaiShiJuPai" value="0" title="否">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width:auto"><span
+                                style="color:red">*</span>封孔验收举牌</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="isFengKongYanShouJuPai" value="1" title="是" checked="">
+                            <input type="radio" name="isFengKongYanShouJuPai" value="0" title="否">
                         </div>
                     </div>
                     <div class="layui-form-item layui-form-text">
                         <label class="layui-form-label">反馈信息</label>
                         <div class="layui-input-block">
-                            <textarea name="reback_msg" placeholder="请输入内容" class="layui-textarea" style="width: 500px"></textarea>
+                            <textarea name="desc" placeholder="请输入内容" class="layui-textarea"
+                                      style="width: 500px"></textarea>
+                        </div>
+                    </div>
+                    <div class="layui-form-item layui-form-text">
+                        <label class="layui-form-label"><span style="color:red">*</span>填报人</label>
+                        <div class="layui-input-block">
+                            <div class="layui-inline">
+                                <input name="person" placeholder="请输填报人" lay-verify="required" class="layui-input">
+                            </div>
                         </div>
                     </div>
                     <br><br>
@@ -63,27 +175,75 @@
         var layer = layui.layer;
         var form = layui.form;
         var $ = layui.$;
-
-        form.on('submit(demo)', function(data){
+        //工作面选择
+        form.on('select(work_face)', function (data) {
+            var work_face = $("#work_face").val();
+            console.log("选择工作面" + work_face);
+            $.post(
+                {% url 'getTunnelByWorkface' %},
+                {"work_face": work_face},
+                function (data) {
+                    //每次先清空下拉框
+                    $("#tunnel").empty();
+                    $("#row").empty();
+                    //先给一个空选项
+                    $("#tunnel").append($("<option />").text("").attr("value", ""));
+                    console.log("data is " + data.data, JSON.stringify(data.data));
+                    {#console.log(JSON.parse(data.data))#}
+                    tunnelObjs = JSON.stringify(data.data) !== '{}' ? JSON.parse(data.data) : [];
+                    console.log(tunnelObjs, 'tunnelObjs')
+                    tunnelObjs.map((item, index) => {
+                        id = item.pk;
+                        name = item.fields.tunnel_name;
+                        $("#tunnel").append($("<option />").text(name).attr("value", id)); //动态添加标签
+                        return item;
+                    });
+                    form.render();
+                })
+        });
+        //巷道选择
+        form.on('select(tunnel)', function (data) {
+            var tunnel = $("#tunnel").val();
+            console.log("选择巷道" + tunnel);
+            $.post(
+                {% url 'getRowByTunnel' %},
+                {"tunnel": tunnel},
+                function (data) {
+                    //每次先清空下拉框
+                    $("#row").empty();
+                    $("#row").append($("<option />").text("").attr("value", ""));
+                    console.log("data is " + data.data, JSON.stringify(data.data));
+                    {#console.log(JSON.parse(data.data))#}
+                    rowObjs = JSON.stringify(data.data) !== '{}' ? JSON.parse(data.data) : [];
+                    console.log(rowObjs, 'rowObjs')
+                    rowObjs.map((item, index) => {
+                        id = item.pk;
+                        name = item.fields.row_id;
+                        $("#row").append($("<option />").text(name).attr("value", id)); //动态添加标签
+                        return item;
+                    });
+                    form.render();
+                })
+            $
+        });
+        form.on('submit(demo)', function (data) {
             $.ajax({
-                   type: "POST",
-                   url: "{% url 'Mining:videos_juipai_submit_process' %}",
-                   data: {"data": JSON.stringify(data.field)},
-                   success: function(res){
-                        if(res.code == 0){      //提交成功
-                            layer.alert(res.msg, {icon: 1,skin: 'layer-ext-demo'})
-                            window.location.href = "{% url 'Mining:check_videos_holding_record_list' %}"
-                        }
-                        else if(res.code == 1){ //提交失败
-                            layer.alert(res.msg);
-                        }
-                   },
-               })
-            //return false;
+                type: "POST",
+                url: "{% url 'Mining:videos_juipai_submit_process' %}",
+                data: {"data": JSON.stringify(data.field)},
+                success: function (res) {
+                    if (res.code == 0) {      //提交成功
+                        layer.alert(res.msg, {icon: 1, skin: 'layer-ext-demo'})
+                    } else if (res.code == 1) { //提交失败
+                        layer.alert(res.msg, {icon: 2, skin: 'layer-ext-demo'})
+                    }
+                },
+            })
+            return false;
         });
 
 
-})
+    })
 </script>
 
 
