--- a/templates/Operator/jupai_required_list.html
+++ b/templates/Operator/jupai_required_list.html
@@ -17,9 +17,63 @@
     <div class="layui-card">
         <div class="layui-card-body">
             <fieldset class="layui-elem-field">
-                <legend>钻孔施工视频举牌监控数据</legend>
+                <blockquote class="layui-elem-quote">钻孔施工视频举牌监控数据</blockquote>
+                <form class="layui-form" action="">
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>工作面选择</label>
+                            <div class="layui-input-block">
+                                <select name="work_face" lay-verify="required" id="work_face"
+                                        lay-filter="work_face">
+                                    <option value=""></option>
+                                    {% for item in work_face %}
+                                        <option value="{{ item.0 }}">{{ item.1 }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>巷道选择</label>
+                            <div class="layui-input-block">
+                                <select name="tunnel" id="tunnel" lay-verify="required" lay-filter="tunnel">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label"><span style="color:red">*</span>排号选择</label>
+                            <div class="layui-input-block">
+                                <select name="row" lay-verify="required" id="row" lay-filter="row">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">孔号</label>
+                            <div class="layui-input-block">
+                                <div class="layui-inline">
+                                    <input class="layui-input" name="kong_num" id="kong_num" autocomplete="off"
+                                           placeholder="请填写孔号">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <div class="layui-form-item">
+                            <div class="layui-input-block">
+                                <button class="layui-btn" data-type="reload">搜索</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
                 <div class="layui-field-box">
-                    <table class="layui-table" id="project_list" lay-filter="test"></table>
+                    <table class="layui-table" id="tableReload" lay-filter="test"></table>
                 </div>
             </fieldset>
         </div>
@@ -27,55 +81,131 @@
 </div>
 </body>
 
-<div class="layui-card" id="layer_test">
-    <div class="layui-card-body">
-        <span>你好呀!</span>
-    </div>
-</div>
-
 </html>
 
 <script src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
 <script src="{% static 'layuiadmin/layui/layui.js' %}"></script>
-<script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs layui-btn-radius" lay-event="fill_data">工程验收</a>
-</script>
 
 <script>
     layui.use(['table', 'upload', 'layer'], function () {
-       var table = layui.table;
-       var layer = layui.layer;
-       var $ = layui.$;
+        var table = layui.table;
+        var layer = layui.layer;
+        var $ = layui.$;
+        var form = layui.form;
 
-       table.render({
-           elem: "#project_list",
-           url: '{% url 'Mining:check_videos_holding_record_rendering' %}',
-           method: 'post',
-           height: 'full-200',
-           defaultToolbar: ['filter', 'exports', 'print'],
-           cols: [[
-               {field: 'id', width: '5%', title: 'ID', sort: true, align: 'center',},
-               {field: 'kong_num', width: '5%', title: '孔号', sort: true, align: 'center',},
-               {field: 'kai_kong_req', width: '7%', title: '开孔申请', sort: true, align: 'center',},
-               {field: 'kai_kong_hold', width: '7%', title: '开孔举牌', sort: true, align: 'center',},
-               {field: 'see_mei_hold', width: '7%', title: '见煤举牌', sort: true, align: 'center',},
-               {field: 'see_ding_hold', width: '7%', title: '见顶举牌', sort: true, align: 'center',},
-               {field: 'end_kong_hold', width: '7%', title: '终孔举牌', sort: true, align: 'center',},
-               {field: 'return_zuan_hold', width: '10%', title: '退钻验收举牌', sort: true, align: 'center',},
-               {field: 'flush_kong_hold', width: '10%', title: '冲煤验收举牌', sort: true, align: 'center',},
-               {field: 'fill_kong_start_hold', width: '10%', title: '封孔开始举牌', sort: true, align: 'center',},
-               {field: 'fill_kong_check_hold', width: '10%', title: '封孔验收举牌', sort: true, align: 'center',},
-               {fixed: 'right', align: 'center', toolbar: '#barDemo', title:'操作'}
-           ]],
-           page:true,
-       });
-
-       table.on('tool(test)', function(obj){
-            var layEvent = obj.event; //获得 lay-event 对应的值
-            if(layEvent == 'fill_data'){
-                
-                window.location.href = "/Mining/operator/check_videos_holding_record_fillin";
+        table.render({
+            elem: "#tableReload",
+            url: '{% url 'Mining:check_videos_holding_record_rendering' %}',
+            method: 'post',
+            height: 'full-200',
+            defaultToolbar: ['filter', 'exports', 'print'],
+            cols: [[
+                {field: 'h_c_number', width: '5%', title: '孔号', sort: true, align: 'center',},
+                {field: 'isKaiKongShenQingStr', width: '6%', title: '开孔申请', sort: true, align: 'center',},
+                {field: 'isKaiKongJuPaiStr', width: '6%', title: '开孔举牌', sort: true, align: 'center',},
+                {field: 'isJianMeiJuPaiStr', width: '6%', title: '见煤举牌', sort: true, align: 'center',},
+                {field: 'isJianDingJuPaiStr', width: '6%', title: '见顶举牌', sort: true, align: 'center',},
+                {field: 'isZhongKongJuPaiStr', width: '6%', title: '终孔举牌', sort: true, align: 'center',},
+                {field: 'isTuiZuanYanShouJuPaiStr', width: '10%', title: '退钻验收举牌', sort: true, align: 'center',},
+                {field: 'isChongMeiYanShouJuPaiStr', width: '10%', title: '冲煤验收举牌', sort: true, align: 'center',},
+                {field: 'isFengKongKaiShiJuPaiStr', width: '10%', title: '封孔开始举牌', sort: true, align: 'center',},
+                {field: 'isFengKongYanShouJuPaiStr', width: '10%', title: '封孔验收举牌', sort: true, align: 'center',},
+                {field: 'dateTimestr', title: '填写时间', align: 'center', width: '7%'},
+                {field: 'desc', title: '反馈信息', align: 'center', width: '10%'},
+                {field: 'person', title: '填报人员', align: 'center'},
+            ]],
+            page: true,
+        });
+        //工作面选择
+        form.on('select(work_face)', function (data) {
+            var work_face = $("#work_face").val();
+            console.log("选择工作面" + work_face);
+            $.post(
+                {% url 'getTunnelByWorkface' %},
+                {"work_face": work_face},
+                function (data) {
+                    //每次先清空下拉框
+                    $("#tunnel").empty();
+                    $("#row").empty();
+                    //先给一个空选项
+                    $("#tunnel").append($("<option />").text("").attr("value", ""));
+                    console.log("data is " + data.data, JSON.stringify(data.data));
+                    {#console.log(JSON.parse(data.data))#}
+                    tunnelObjs = JSON.stringify(data.data) !== '{}' ? JSON.parse(data.data) : [];
+                    console.log(tunnelObjs, 'tunnelObjs')
+                    tunnelObjs.map((item, index) => {
+                        id = item.pk;
+                        name = item.fields.tunnel_name;
+                        $("#tunnel").append($("<option />").text(name).attr("value", id)); //动态添加标签
+                        return item;
+                    });
+                    form.render();
+                })
+        });
+        //巷道选择
+        form.on('select(tunnel)', function (data) {
+            var tunnel = $("#tunnel").val();
+            console.log("选择巷道" + tunnel);
+            $.post(
+                {% url 'getRowByTunnel' %},
+                {"tunnel": tunnel},
+                function (data) {
+                    //每次先清空下拉框
+                    $("#row").empty();
+                    $("#row").append($("<option />").text("").attr("value", ""));
+                    console.log("data is " + data.data, JSON.stringify(data.data));
+                    {#console.log(JSON.parse(data.data))#}
+                    rowObjs = JSON.stringify(data.data) !== '{}' ? JSON.parse(data.data) : [];
+                    console.log(rowObjs, 'rowObjs')
+                    rowObjs.map((item, index) => {
+                        id = item.pk;
+                        name = item.fields.row_id;
+                        $("#row").append($("<option />").text(name).attr("value", id)); //动态添加标签
+                        return item;
+                    });
+                    form.render();
+                })
+            $
+        });
+        var $ = layui.$, active = {
+            reload: function () {
+                var kong_num = $('#kong_num').val();
+                var rowId = $("#row").val();
+                console.log("kong_num is", kong_num);
+                console.log("rowId is", rowId);
+                //执行重载
+                table.reload('tableReload', {
+                    method: 'get',
+                    url: "{% url 'Mining:check_videos_holding_record_rendering' %}",
+                    where: {
+                        kong_num: kong_num,
+                        rowId: rowId
+                    },
+                    page: {
+                        curr: 1
+                    },
+                    done: function (res, curr, count) {
+                        //res为接口返回的信息
+                        console.log(res);
+                    }
+                }, 8000);
             }
-       });
+        };
+        $('.layui-btn').on('click', function () {
+            var workface = $("#work_face").val();
+            var tunnel = $("#tunnel").val();
+            var row = $("#row").val();
+            if (workface === "") {
+                layer.msg('请进行工作面选择', {icon: 5});
+            } else if (tunnel === "") {
+                layer.msg('请进行巷道选择', {icon: 5});
+            } else if (row === "") {
+                layer.msg('请进行排号选择', {icon: 5});
+            } else {
+                var type = $(this).data('type');
+                active[type] ? active[type].call(this) : '';
+            }
+            return false;
+        });
     });
 </script>
