--- a/templates/Operator/operator_index.html
+++ b/templates/Operator/operator_index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="{% static 'layuiadmin/layui/css/layui.css'%}">
-    <link rel="stylesheet" href="{% static 'layuiadmin/style/admin.css'%}">
+    <link rel="stylesheet" href="{% static 'layuiadmin/layui/css/layui.css' %}">
+    <link rel="stylesheet" href="{% static 'layuiadmin/style/admin.css' %}">
 </head>
 <body class="layui-layout-body">
 
@@ -65,7 +65,7 @@
                 </li>
                 <li class="layui-nav-item" lay-unselect>
                     <a href="javascript:;">
-                        <cite>贤心</cite>
+                        <cite>{{ userName }}</cite>
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a lay-href="info.html">基本资料</a></dd>
@@ -95,24 +95,15 @@
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu"
                     lay-filter="layadmin-system-side-menu">
                     <li data-name="home" class="layui-nav-item">
-                        <a href="javascript:;" lay-tips="巷道管理" lay-direction="2">
-                            <i class="layui-icon layui-icon-set"></i>
-                            <cite>巷道管理</cite>
-                        </a>
-                        <dl class="layui-nav-child">
-                            <dd data-name="console"><a lay-href="{% url 'Mining:goto_roadway_choose_viewpage' %}">巷道选择</a></dd>
-                        </dl>
-                    </li>
-
-                    <li data-name="home" class="layui-nav-item">
                         <a href="javascript:;" lay-tips="实验管理" lay-direction="2">
                             <i class="layui-icon layui-icon-survey"></i>
                             <cite>钻孔设计</cite>
                         </a>
                         <dl class="layui-nav-child">
-                            <dd data-name="console"><a lay-href="{% url 'drilling_design_params' %}">钻孔设计参数</a></dd>
-                            <dd data-name="console"><a lay-href="{% url 'warning_reminder' %}">预警提醒</a></dd>
-
+                            <dd data-name="console"><a lay-href="{% url 'operator_drilling_design' %}">打孔申请审批</a></dd>
+                            <dd data-name="console"><a lay-href="{% url 'operator_drilling_design_his' %}">打孔申请记录</a>
+                            </dd>
+                            {#                            <dd data-name="console"><a lay-href="{% url 'warning_reminder' %}">预警提醒</a></dd>#}
                         </dl>
                     </li>
 
@@ -122,23 +113,71 @@
                             <cite>施工确认</cite>
                         </a>
                         <dl class="layui-nav-child">
-                            <dd data-name="console"><a lay-href="{% url 'Mining:check_videos_record_list' %}">视频监控验收</a></dd>
-                            <dd data-name="console"><a lay-href="{% url 'Mining:check_videos_holding_record_list' %}">视频举牌验收</a></dd>
-                            <dd data-name="console"><a lay-href="{% url 'Mining:check_material_record_list' %}">施工资料验收</a></dd>
+                            <dd data-name="console"><a
+                                    lay-href="{% url 'operator_drill_construct_list_page' %}">施工审请审批</a></dd>
+                            <dd data-name="console"><a
+                                    lay-href="{% url 'operator_drill_construct_list_his' %}">施工审批记录</a></dd>
+                            </dl>
+                    </li>
+                    <li data-name="process" class="layui-nav-item">
+                        <a href="javascript:;" lay-tips="实验管理" lay-direction="2">
+                            <i class="layui-icon layui-icon-util"></i>
+                            <cite>冲孔确认</cite>
+                        </a>
+                        <dl class="layui-nav-child">
+                            <dd data-name="console"><a lay-href="{% url 'operator_flush_apply_page' %}">冲孔申请审批</a></dd>
+                            <dd data-name="console"><a lay-href="{% url 'operator_flush_drill_list_page' %}">冲孔确认审批</a>
+                            </dd>
+                            <dd data-name="console"><a lay-href="{% url 'operator_flush_drill_list_his' %}">冲孔申请记录</a>
+                            </dd>
+                        </dl>
+                    </li>
+                    <li data-name="process" class="layui-nav-item">
+                        <a href="javascript:;" lay-tips="实验管理" lay-direction="2">
+                            <i class="layui-icon layui-icon-util"></i>
+                            <cite>封孔确认</cite>
+                        </a>
+                        <dl class="layui-nav-child">
+                            <dd data-name="console"><a lay-href="{% url 'operator_feng_apply_page' %}">封孔申请审批</a></dd>
+                            <dd data-name="console"><a lay-href="{% url 'operator_feng_drill_list_page' %}">封孔确认审批</a>
+                            </dd>
+                            <dd data-name="console"><a lay-href="{% url 'operator_feng_drill_list_his' %}">封孔申请记录</a>
+                            </dd>
+                        </dl>
+                    </li>
+                    <li data-name="process" class="layui-nav-item">
+                        <a href="javascript:;" lay-tips="实验管理" lay-direction="2">
+                            <i class="layui-icon layui-icon-util"></i>
+                            <cite>资料及环节验收</cite>
+                        </a>
+                        <dl class="layui-nav-child">
+                            <dd data-name="console"><a
+                                    lay-href="{% url 'Mining:check_videos_record_fillin' %}">视频监控验收</a></dd>
+                            <dd data-name="console"><a
+                                    lay-href="{% url 'Mining:check_videos_record_list' %}">视频监控验收记录</a></dd>
+                            <dd data-name="console"><a lay-href="{% url 'Mining:check_videos_holding_record_fillin' %}">视频举牌验收</a>
+                            </dd>
+                            <dd data-name="console"><a lay-href="{% url 'Mining:check_videos_holding_record_list' %}">视频举牌验收记录</a>
+                            </dd>
+                            <dd data-name="console"><a
+                                    lay-href="{% url 'Mining:check_material_record_fillin' %}">施工资料验收</a></dd>
+                            <dd data-name="console"><a
+                                    lay-href="{% url 'Mining:check_material_record_list' %}">施工资料验收记录</a></dd>
                         </dl>
                     </li>
 
+
                     <li data-name="senior" class="layui-nav-item">
-                          <a href="javascript:;" lay-tips="消息中心">
+                        <a href="javascript:;" lay-tips="消息中心">
                             <i class="layui-icon layui-icon-dialogue"></i>
                             <cite>消息中心</cite>
-                          </a>
-                          <dl class="layui-nav-child">
-                                <dd><a lay-href="{% url 'Mining:goto_apply_record_viewpage' %}">申请记录</a></dd>
-                                <dd><a lay-href="{% url 'Mining:goto_approve_record_viewpage' %}">审批记录</a></dd>
-                                <dd><a lay-href="">系统消息</a></dd>
-                                <dd><a lay-href="">历史消息</a></dd>
-                          </dl>
+                        </a>
+                        <dl class="layui-nav-child">
+                            {#                                <dd><a lay-href="{% url 'Mining:goto_apply_record_viewpage' %}">申请记录</a></dd>#}
+                            {#                                <dd><a lay-href="{% url 'Mining:goto_approve_record_viewpage' %}">审批记录</a></dd>#}
+                            <dd><a lay-href="">系统消息</a></dd>
+                            <dd><a lay-href="">历史消息</a></dd>
+                        </dl>
                     </li>
 
 
@@ -174,7 +213,7 @@
         <!-- 主体内容 -->
         <div class="layui-body" id="LAY_app_body">
             <div class="layadmin-tabsbody-item layui-show">
-           </div>
+            </div>
         </div>
 
         <!-- 辅助元素，一般用于移动设备下遮罩 -->
@@ -182,7 +221,7 @@
     </div>
 </div>
 
-<script src="{% static 'layuiadmin/layui/layui.js'%}"></script>
+<script src="{% static 'layuiadmin/layui/layui.js' %}"></script>
 <script>
     layui.config({
         base: "{% static 'layuiadmin/'%}" //静态资源所在路径
