--- a/templates/Super/admin_index.html
+++ b/templates/Super/admin_index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="{% static 'layuiadmin/layui/css/layui.css'%}">
-    <link rel="stylesheet" href="{% static 'layuiadmin/style/admin.css'%}">
+    <link rel="stylesheet" href="{% static 'layuiadmin/layui/css/layui.css' %}">
+    <link rel="stylesheet" href="{% static 'layuiadmin/style/admin.css' %}">
 </head>
 <body class="layui-layout-body">
 
@@ -65,7 +65,7 @@
                 </li>
                 <li class="layui-nav-item" lay-unselect>
                     <a href="javascript:;">
-                        <cite>贤心</cite>
+                        <cite>{{ user.username }}</cite>
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a lay-href="info.html">基本资料</a></dd>
@@ -94,7 +94,16 @@
 
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu"
                     lay-filter="layadmin-system-side-menu">
-
+                    <li data-name="home" class="layui-nav-item">
+                        <a href="javascript:;" lay-tips="实验管理" lay-direction="2">
+                            <i class="layui-icon layui-icon-survey"></i>
+                            <cite>钻孔设计</cite>
+                        </a>
+                        <dl class="layui-nav-child">
+                            <dd data-name="console"><a lay-href="{% url 'operator_drilling_design' %}">打孔申请审批</a></dd>
+                            <dd data-name="console"><a lay-href="{% url 'operator_drilling_design_his' %}">打孔申请记录</a></dd>
+                        </dl>
+                    </li>
                     <li data-name="component" class="layui-nav-item">
                         <a href="javascript:;" lay-tips="钻孔评价" lay-direction="2">
                             <i class="layui-icon layui-icon-component"></i>
@@ -110,45 +119,45 @@
                                 <a lay-href={% url 'empty_area_assess' %}>空白区域评价</a>
                             </dd>
                         </dl>
+{#                        <dl class="layui-nav-child">#}
+{#                            <dd data-name="experiment">#}
+{#                                <a lay-href={% url 'exception_handle_page' %}>冲孔质量评价</a>#}
+{#                            </dd>#}
+{#                        </dl>#}
                         <dl class="layui-nav-child">
                             <dd data-name="experiment">
                                 <a lay-href={% url 'seal_grouting_assess' %}>封孔注浆评价</a>
                             </dd>
                         </dl>
-                        <dl class="layui-nav-child">
-                            <dd data-name="experiment">
-                                <a lay-href={% url 'exception_handle_page' %}>异常处置</a>
-                            </dd>
-                        </dl>
 
                     </li>
 
                     <li data-name="senior" class="layui-nav-item">
-                          <a href="javascript:;" lay-tips="智能绘图">
+                        <a href="javascript:;" lay-tips="智能绘图">
                             <i class="layui-icon layui-icon-chart"></i>
                             <cite>智能绘图</cite>
-                          </a>
-                          <dl class="layui-nav-child">
-                                <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">设计平面图绘制</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">设计剖面图绘制</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">施工平面图绘制</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">施工剖面图绘制</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">瓦斯地质图绘制</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">防突预测图绘制</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">单组剖面图绘制</a></dd>
-                          </dl>
+                        </a>
+                        <dl class="layui-nav-child">
+{#                            <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">设计平面图绘制</a></dd>#}
+                            <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">设计剖面图绘制</a></dd>
+{#                            <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">施工平面图绘制</a></dd>#}
+                            <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">施工剖面图绘制</a></dd>
+{#                            <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">瓦斯地质图绘制</a></dd>#}
+                            <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">防突预测图绘制</a></dd>
+{#                            <dd><a lay-href="{% url 'Mining:admin_draw_graph_one' %}">单组剖面图绘制</a></dd>#}
+                        </dl>
                     </li>
 
                     <li data-name="senior" class="layui-nav-item">
-                          <a href="javascript:;" lay-tips="数据中心">
+                        <a href="javascript:;" lay-tips="数据中心">
                             <i class="layui-icon layui-icon-table"></i>
                             <cite>数据中心</cite>
-                          </a>
-                          <dl class="layui-nav-child">
-                                <dd><a lay-href="{% url 'Mining:admin_search_data' %}">数据查询</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_data_operator' %}">列表导出与打印</a></dd>
-                                <dd><a lay-href="{% url 'Mining:admin_database_update' %}">数据库更新</a></dd>
-                          </dl>
+                        </a>
+                        <dl class="layui-nav-child">
+                            <dd><a lay-href="{% url 'Mining:admin_search_data' %}">数据查询</a></dd>
+                            {#                                <dd><a lay-href="{% url 'Mining:admin_data_operator' %}">列表导出与打印</a></dd>#}
+                            {#                                <dd><a lay-href="{% url 'Mining:admin_database_update' %}">数据库更新</a></dd>#}
+                        </dl>
                     </li>
 
 
@@ -184,7 +193,7 @@
         <!-- 主体内容 -->
         <div class="layui-body" id="LAY_app_body">
             <div class="layadmin-tabsbody-item layui-show">
-           </div>
+            </div>
         </div>
 
         <!-- 辅助元素，一般用于移动设备下遮罩 -->
@@ -192,7 +201,7 @@
     </div>
 </div>
 
-<script src="{% static 'layuiadmin/layui/layui.js'%}"></script>
+<script src="{% static 'layuiadmin/layui/layui.js' %}"></script>
 <script>
     layui.config({
         base: "{% static 'layuiadmin/'%}" //静态资源所在路径
